--- a/Marc/Marc.csproj
+++ b/Marc/Marc.csproj
@@ -40,7 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlField.cs" />
+    <Compile Include="DataField.cs" />
+    <Compile Include="Field.cs" />
+    <Compile Include="LDR.cs" />
+    <Compile Include="MarcRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubField.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
